--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.12",
 		"chart.js": "^4.5.0",
+		"sweetalert2": "^11.22.5",
 		"tailwindcss": "^4.1.12"
 	}
 }
